--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -10,11 +10,11 @@ import Head from "../components/Head.astro";
 		<div>
 			<div class="link-hero">
 				<div>
-					<h1 class="hero-header">HyperSlice</h1>
+					<h1 class="hero-header">miau.ly</h1>
 					<span>ˈhaɪpər</span>
 					<span>slaɪs</span>
 				</div>
-				<a href="https://github.com/kiabq/short-link" target="_blank">
+				<a href="https://google.com" target="_blank">
 					<img
 						src={github.src}
 						width={32}
